objects/Job_Ticket_Detail__c.object
<CustomObject>
    <label>Job Ticket Detail</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Job Ticket Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Tickets Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Job__c</fullName>
        <label>Job</label>
        <referenceTo>Artera_Job__c</referenceTo>
        <relationshipLabel>Job Tickets Detail</relationshipLabel>
        <relationshipName>Job_Tickets_Detail</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <formula>Job_Ticket__r.Job1__r.Project__r.Project_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Date__c</fullName>
        <formula>Job_Ticket__r.Job1__r.Job_Date__c</formula>
        <label>Job Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>LEFT(Job_Ticket__r.Location__c,30)</formula>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Item</label>
        <referenceTo>Project_Item__c</referenceTo>
        <relationshipLabel>Job Tickets Detail</relationshipLabel>
        <relationshipName>Job_Tickets_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <formula>IF(

Text(Job_Ticket__r.Job1__r.Status__c) = &quot;Pending Payroll Approval&quot; || Text(Job_Ticket__r.Job1__r.Status__c) = &quot;Completed&quot;, &quot;Completed&quot;, &quot; &quot;)</formula>
        <label>Job Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Ticket__c</fullName>
        <label>Job Ticket</label>
        <referenceTo>Job_Ticket__c</referenceTo>
        <relationshipLabel>Job Tickets Detail</relationshipLabel>
        <relationshipName>Job_Tickets_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Vehicle_Id__c</fullName>
        <formula>Job_Ticket__r.Job1__r.Asset__r.Name</formula>
        <label>Vehicle Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <formula>Job_Ticket__r.Job1__r.Work_Order__r.Name</formula>
        <label>Work Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Match__c</fullName>
        <formula>Job__r.Project_ID__c =  Unit_Item__r.Project__r.Project_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operator_Hours__c</fullName>
        <label>Operator Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_email_notify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No email notify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit_Item_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unit Item Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit_Item_Label__c</fullName>
        <formula>Unit_Item__r.Item__r.Unit_Item_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Item Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_to_Dynamics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to Dynamics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Daily_Item_Number__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Daily Item Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Job_Ticket_Number__c</fullName>
        <formula>Job_Ticket__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Ticket Number</label>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Job_completed_validation</fullName>
        <active>true</active>
        <description>when job status is completed the user is not able to edit the record Apart from the user who has the permission to bypass the validation.</description>
        <errorConditionFormula>AND(ISPICKVAL( Job_Ticket__r.Job1__r.Status__c , &quot;Completed&quot;), $User.Bypass_Validation__c = FALSE)</errorConditionFormula>
        <errorMessage>You can&apos;t change the record information.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Item_Validation_Rule</fullName>
        <active>false</active>
        <errorConditionFormula>AND(IF(Unit_Item__r.Project__r.Project_Id__c  &lt;&gt; Job__r.Project_ID__c,True ,false),

 NOT( ISBLANK( Unit_Item__c ) )
)</errorConditionFormula>
        <errorMessage>You cannot save the record unless unit item is equals to project id.</errorMessage>
    </validationRules>
</CustomObject>